fix scrollbar jump

--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 	background-image: url('coffee-bg.jpg');
 	background-attachment: fixed;
 	box-sizing: border-box;
+	overflow-y: scroll;
 }
 
 *, *:before, *:after {
